<resources>
    <string name="app_name">Catch The Lines</string>
    <string name="play">시작 하기</string>
    <string name="about">설명 보기</string>
    <string name="see_record">기록 보기</string>
    <string name="exit">종료 하기</string>

    <string name="all_line1">대사1</string>
    <string name="all_line2">대사2</string>

    <string name="game_listen_and_guess">대사를 듣고 제목을 맞혀보세요!</string>
    <string name="game_description_select_hint">힌트 선택</string>
    <string name="game_description_change_line">대사 변경</string>
    <string name="game_description_play_line">대사 재생하기</string>
    <string name="game_description_pause_line">대사 일시정지</string>
    <string name="game_description_first_character_hint">글자 수 힌트 요청</string>
    <string name="game_description_characters_count_Hint">첫 글자 힌트 요청</string>
    <string name="game_description_clearer_poster_Hint">선명한 사진 힌트 요청</string>
    <string name="game_characters_count">글자수</string>
    <string name="game_first_character">첫글자</string>
    <string name="game_clearer_poster">선명함</string>
    <string name="game_available_hint_count">남은 힌트: %d개</string>
    <string name="game_description_submit">제출하기</string>
    <string name="game_result_catch_the_line">%s ✅</string>
    <string name="game_result_wrong">%s ❌</string>
    <string name="game_result_all_catch">모두 캐치하셨습니다! 💯</string>
    <string name="game_line_label">대사%d</string>
    <string name="game_reset_game_state_message_title">게임 상태 초기화</string>
    <string name="game_reset_game_state_message_body">직전 컨텐츠의 게임 상태가 초기화 됩니다.
        다음 컨텐츠로 이동하시겠어요?</string>
    <string name="game_reset_game_state_message_positive">네, 이동할게요</string>
    <string name="game_reset_game_state_message_negative">아니요</string>

    <string name="game_board_title">게임 보드</string>
    <string name="game_board_result_for_submit">결과</string>

    <string name="main_poster_description">메인 포스터 이미지</string>
    <string name="backdrop_poster_description">배경 포스터 이미지</string>

    <string name="record_title">게임 기록</string>
    <string name="record_caught_contents">캐치한 컨텐츠</string>
    <string name="record_description_btn_navigate_to_caught_contents">캐치한 컨텐츠 보기 버튼</string>
    <string name="record_catch_count">캐치: %d개</string>
    <string name="record_try_count">도전: %d개</string>
    <string name="record_statistics">%d / %d</string>

    <string name="detail_release_date">%s 개봉</string>
    <string name="detail_running_time">%d 분</string>>
    <string name="detail_short_summary">\"%s\"</string>>

    <string name="transition_main_poster_image">transition_main_poster_image_%s</string>
</resources>