<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/title_main"
        style="@style/TextTitle.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintVertical_bias="0.25"
        android:letterSpacing="0.05"
        android:text="@string/title_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button_main"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_main"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/about_button_main"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_button_main"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record_button_main"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/see_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_button_main"
        app:layout_constraintWidth_percent="0.6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit_button_main"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_button_main"
        app:layout_constraintWidth_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>