<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.eryuksa.catchthelines.ui.game.GameViewModel" />

        <import type="com.eryuksa.catchthelines.ui.game.uistate.GameMode" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_radius_10dp"
        android:backgroundTint="@color/grey2"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_board_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_from_title"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_header_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_board_result_for_submit"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_from_title"
            tools:text="결과" />

        <TextView
            android:id="@+id/tv_body_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:minHeight="48sp"
            gameMode="@{viewModel.uiState.gameMode}"
            resultText="@{viewModel.uiState.resultText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_result"
            tools:text="극한알바 X" />

        <View
            android:id="@+id/divider_from_result"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_body_result" />

        <TextView
            android:id="@+id/tv_header_first_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_first_character"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_from_result" />

        <TextView
            android:id="@+id/tv_body_first_character"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="24sp"
            android:text="@{viewModel.uiState.firstCharacterHint}"
            app:layout_constraintEnd_toStartOf="@id/divider_between_hint"
            app:layout_constraintStart_toStartOf="@id/tv_header_first_character"
            app:layout_constraintTop_toBottomOf="@id/tv_header_first_character"
            tools:text="극" />

        <View
            android:id="@+id/divider_between_hint"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@id/tv_body_first_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header_first_character" />

        <TextView
            android:id="@+id/tv_header_character_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/game_characters_count"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/divider_between_hint"
            app:layout_constraintTop_toBottomOf="@id/divider_from_result" />

        <TextView
            android:id="@+id/tv_body_character_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="24sp"
            android:text="@{viewModel.uiState.characterCountHint.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_header_character_count"
            app:layout_constraintTop_toBottomOf="@id/tv_header_character_count"
            tools:text="5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
