<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.eryuksa.catchthelines.ui.record.RecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back_24"
            app:title="@string/record_title" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/tv_statistics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_circle"
            android:gravity="center"
            android:text="@{@string/record_statistics(vm.uiState.caughtContentsCount, vm.uiState.triedContentsCount)}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintWidth_percent="0.3"
            tools:text="8 / 21" />

        <View
            android:id="@+id/divider_catch_count"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_statistics"
            app:layout_constraintEnd_toStartOf="@id/tv_statistics"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_statistics"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_caught_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{@string/record_catch_count(vm.uiState.caughtContentsCount)}"
            app:layout_constraintBottom_toBottomOf="@id/divider_catch_count"
            app:layout_constraintEnd_toStartOf="@id/tv_statistics"
            app:layout_constraintStart_toEndOf="@id/divider_catch_count"
            app:layout_constraintTop_toTopOf="@id/divider_catch_count"
            tools:text="캐치: 4개" />

        <TextView
            android:id="@+id/tv_try_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{@string/record_try_count(vm.uiState.triedContentsCount)}"
            app:layout_constraintBottom_toBottomOf="@id/divider_try_count"
            app:layout_constraintEnd_toEndOf="@id/tv_caught_count"
            app:layout_constraintStart_toStartOf="@id/tv_caught_count"
            app:layout_constraintTop_toTopOf="@id/divider_try_count"
            tools:text="도전: 4개" />

        <View
            android:id="@+id/divider_try_count"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_statistics"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintStart_toStartOf="@id/divider_catch_count"
            app:layout_constraintTop_toTopOf="@id/tv_statistics"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/tv_title_caught_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48sp"
            android:text="@string/record_caught_contents"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_try_count" />

        <ImageButton
            android:id="@+id/btn_navigate_to_caught_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/record_description_btn_navigate_to_caught_contents"
            android:src="@drawable/icon_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_caught_contents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_caught_contents" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_caught_contents"
            contents="@{vm.uiState.caughtContents}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_caught_contents"
            tools:listitem="@layout/item_caught_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
